--- a/templates/add_question.html
+++ b/templates/add_question.html
@@ -103,7 +103,7 @@
             
 <div id="credits-section" style="display:none;">
     <label for="assignCredits">Assign Credits:</label>
-    <input type="number" id="assignCredits" name="credits" min="0" style="width: 50%;">
+    <input type="number" id="assignCredits" name="credits" min="0" value="0" style="width: 50%;">
     <div style="color: goldenrod; font-size: small;">Available credits: {{ earned_credits }}</div>
     <div id="credit-error" style="color: red; font-size: small; display: none;">Invalid credit value</div>
 </div>
